# Self-built-python-encryption-tool-My-custom-CLI-tool-

./: .gitignore  LICENSE  README.md  README.md.txt  pyproject.toml  simple_cryptography_code_idea.py
src/omarcrypto/: __init__.py  cli.py  core.py
